kubernetes/services/jackett.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 9117
  selector:
    app: jackett

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jackett
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`jackett.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: jackett
          port: 9117
  tls:
    secretName: wilcard-main-domain-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: default
  labels:
    app: jackett
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: app
          image: lscr.io/linuxserver/jackett:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.25"
            limits:
              memory: "2048Mi"
              cpu: "1.00"
          ports:
            - name: web
              containerPort: 9117
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /downloads
      volumes:
        - name: config
          hostPath:
            path: /storage/jackett/config
        - name: media
          hostPath:
            path: /storage/jackett/downloads
